/** \file
 *
 *  This file contains special DoxyGen information for the generation of the main page and other special
 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *  <b>New:</b>
  *  - Core:
  *   - Added support for the Pololu A-Star Micro board (thanks to Joh Schneider)
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - The CALLBACK_USB_GetDescriptor() callback function into the user application erroneously had a uint8_t type for the wIndex
  *     parameter, instead of uint16_t (thanks to Matlo)
  *   - Fixed broken USE_RAM_DESCRIPTORS compile time option when the FIXED_NUM_CONFIGURATIONS compile time option is not enabled
  *     in a user application (thanks to Matlo)
  *   - Fixed missing \c va_end() calls in the HID bootloader CLI app which could cause portability issues
  *   - Fixed void pointer arithmetic in the \c Serial_SendData() functions for AVR8 and XMEGA architectures
  *   - Fixed void pointer arithmetic in the low level and class driver RNDIS demo protocol decoders
  *   - Fixed low level RNDIS demo incorrectly setting the RNDIS state when a null packet filter was requested
  *   - Fixed missing entries in several project's Atmel Studio integration files, such as driver INF files
  *   - Fixed invalid endpoint indexes causing memory corruption in device Clear/Set Feature standard requests (thanks to Peter Popovec)
  *
  *  <b>Changed:</b>
  *   - Added signed alternative libUSB driver for the AVRISP-MKII clone project, to support Atmel Studio 7 (thanks to Atmel)
  *   - Removed no longer required LIBUSB_DRIVER_COMPAT and RESET_TOGGLES_LIBUSB_COMPAT configuration options from the AVRISP-MKII
  *     clone project, as the new libUSB driver works for AVRDUDE and Atmel Studio 7 under Windows
  *
  *  \section Sec_ChangeLog151115 Version 151115
  *  <b>New:</b>
  *   - Added support for the Atmel Xplained-MINI series of development kits